Completed project code, pending is the execution of model with more data in a server with more GPU power

--- a/RNN_project.ipynb
+++ b/RNN_project.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 210,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 211,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -717,7 +717,7 @@
        "\"ï»¿project gutenberg's the adventures of sherlock holmes, by arthur conan doyle\\n\\nthis ebook is for the use of anyone anywhere at no cost and with\\nalmost no restrictions whatsoever.  you may copy it, give it away or\\nre-use it under the terms of the project gutenberg license included\\nwith this ebook or online at www.gutenberg.net\\n\\n\\ntitle: the adventures of sherlock holmes\\n\\nauthor: arthur conan doyle\\n\\nposting date: april 18, 2011 [ebook #1661]\\nfirst posted: november 29, 2002\\n\\nlanguage: english\\n\\n\\n*** start of this project gutenberg ebook the adventures of sherlock holmes ***\\n\\n\\n\\n\\nproduced by an anonymous project gutenberg volunteer and jose menendez\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nthe adventures of sherlock holmes\\n\\nby\\n\\nsir arthur conan doyle\\n\\n\\n\\n   i. a scandal in bohemia\\n  ii. the red-headed league\\n iii. a case of identity\\n  iv. the boscombe valley mystery\\n   v. the five orange pips\\n  vi. the man with the twisted lip\\n vii. the adventure of the blue carbuncle\\nviii. the adventure of the speckled band\\n  ix. the adventure of the engineer's thumb\\n   x. the adventure of the noble bachelor\\n  xi. the adventure of the beryl coronet\\n xii. the adventure of the copper beeches\\n\\n\\n\\n\\nadventure i. a scandal in bohemia\\n\\ni.\\n\\nto sherlock holmes she is always the woman. i have seldom heard\\nhim mention her under any other name. in his eyes she eclipses\\nand predominates the whole of her sex. it was not that he felt\\nany emotion akin to love for irene adler. all emotions, and that\\none particularly, were abhorrent to his cold, precise but\\nadmirably balanced mind. he was, i take it, the most perfect\\nreasoning and observing machine that the world has seen, but as a\\nlover he would have placed himself in a false position. he never\\nspoke of the softer passions, save with a gibe and a sneer. they\\nwere admirable things for the observer--excellent for drawing the\\nveil from men's motives and actions. but for the trained reasoner\\nto admit such intrusions into his own delicate and finely\\nadjusted temperament was to introduce a di\""
       ]
      },
-     "execution_count": 144,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 212,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 213,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -780,7 +780,7 @@
        "\" his eyes she eclipses and predominates the whole of her sex. it was not that he felt any emotion akin to love for irene adler. all emotions, and that one particularly, were abhorrent to his cold, precise but admirably balanced mind. he was, i take it, the most perfect reasoning and observing machine that the world has seen, but as a lover he would have placed himself in a false position. he never spoke of the softer passions, save with a gibe and a sneer. they were admirable things for the observer--excellent for drawing the veil from men's motives and actions. but for the trained reasoner to admit such intrusions into his own delicate and finely adjusted temperament was to introduce a distracting factor which might throw a doubt upon all his mental results. grit in a sensitive instrument, or a crack in one of his own high-power lenses, would not be more disturbing than a strong emotion in a nature such as his. and yet there was but one woman to him, and that woman was the late irene \""
       ]
      },
-     "execution_count": 146,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 214,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 215,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -848,7 +848,7 @@
        "' his eyes she eclipses and predominates the whole of her sex. it was not that he felt any emotion akin to love for irene adler. all emotions, and that one particularly, were abhorrent to his cold, precise but admirably balanced mind. he was, i take it, the most perfect reasoning and observing machine that the world has seen, but as a lover he would have placed himself in a false position. he never spoke of the softer passions, save with a gibe and a sneer. they were admirable things for the observer excellent for drawing the veil from men s motives and actions. but for the trained reasoner to admit such intrusions into his own delicate and finely adjusted temperament was to introduce a distracting factor which might throw a doubt upon all his mental results. grit in a sensitive instrument, or a crack in one of his own high power lenses, would not be more disturbing than a strong emotion in a nature such as his. and yet there was but one woman to him, and that woman was the late irene adler, of dubious and questionable memory. i had seen little of holmes lately. my marriage had drifted us away from each other. my own complete happiness, and the home centred interests which rise up around the man who first finds himself master of his own establishment, were sufficient to absorb all my attention, while holmes, who loathed every form of society with his whole bohemian soul, remained in our lodgings in baker street, buried among his old books, and alternating from week to week between cocaine and ambition, the drowsiness of the drug, and the fierce energy of his own keen nature. he was still, as ever, deeply attracted by the study of crime, and occupied his immense faculties and extraordinary powers of observation in following out those clues, and clearing up those mysteries which had been abandoned as hopeless by the official police. from time to time i heard some vague account of his doings: of his summons to odessa in the case of the trepoff murder, of his clearing up'"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 216,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 217,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 218,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 219,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1070,13 +1070,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this corpus has 33 unique characters\n",
+      "and these characters are \n",
+      "[' ', '!', ',', '.', ':', ';', '?', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n"
+     ]
+    }
+   ],
    "source": [
     "# print out the number of unique characters in the dataset\n",
     "chars = sorted(list(set(text)))\n",
@@ -1146,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1173,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1215,13 +1225,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Possible steps:  114716.6\n"
+     ]
+    }
+   ],
    "source": [
     "# use your function\n",
     "window_size = 100\n",
@@ -1254,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1296,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1321,16 +1339,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/40\n",
+      "5s - loss: 3.1845\n",
+      "Epoch 2/40\n",
+      "4s - loss: 2.9800\n",
+      "Epoch 3/40\n",
+      "4s - loss: 2.9185\n",
+      "Epoch 4/40\n",
+      "4s - loss: 2.8798\n",
+      "Epoch 5/40\n",
+      "4s - loss: 2.8522\n",
+      "Epoch 6/40\n",
+      "4s - loss: 2.8242\n",
+      "Epoch 7/40\n",
+      "4s - loss: 2.7902\n",
+      "Epoch 8/40\n",
+      "4s - loss: 2.7544\n",
+      "Epoch 9/40\n",
+      "4s - loss: 2.7142\n",
+      "Epoch 10/40\n",
+      "4s - loss: 2.6692\n",
+      "Epoch 11/40\n",
+      "5s - loss: 2.6185\n",
+      "Epoch 12/40\n",
+      "5s - loss: 2.5728\n",
+      "Epoch 13/40\n",
+      "6s - loss: 2.5294\n",
+      "Epoch 14/40\n",
+      "5s - loss: 2.4846\n",
+      "Epoch 15/40\n",
+      "6s - loss: 2.4465\n",
+      "Epoch 16/40\n",
+      "6s - loss: 2.4121\n",
+      "Epoch 17/40\n",
+      "7s - loss: 2.3783\n",
+      "Epoch 18/40\n",
+      "6s - loss: 2.3564\n",
+      "Epoch 19/40\n",
+      "6s - loss: 2.3285\n",
+      "Epoch 20/40\n",
+      "5s - loss: 2.3081\n",
+      "Epoch 21/40\n",
+      "6s - loss: 2.2842\n",
+      "Epoch 22/40\n",
+      "5s - loss: 2.2631\n",
+      "Epoch 23/40\n",
+      "5s - loss: 2.2432\n",
+      "Epoch 24/40\n",
+      "5s - loss: 2.2255\n",
+      "Epoch 25/40\n",
+      "5s - loss: 2.2042\n",
+      "Epoch 26/40\n",
+      "6s - loss: 2.1877\n",
+      "Epoch 27/40\n",
+      "7s - loss: 2.1740\n",
+      "Epoch 28/40\n",
+      "6s - loss: 2.1554\n",
+      "Epoch 29/40\n",
+      "6s - loss: 2.1367\n",
+      "Epoch 30/40\n",
+      "6s - loss: 2.1202\n",
+      "Epoch 31/40\n",
+      "6s - loss: 2.1055\n",
+      "Epoch 32/40\n",
+      "6s - loss: 2.0863\n",
+      "Epoch 33/40\n",
+      "6s - loss: 2.0709\n",
+      "Epoch 34/40\n",
+      "7s - loss: 2.0563\n",
+      "Epoch 35/40\n",
+      "7s - loss: 2.0421\n",
+      "Epoch 36/40\n",
+      "7s - loss: 2.0253\n",
+      "Epoch 37/40\n",
+      "7s - loss: 2.0045\n",
+      "Epoch 38/40\n",
+      "8s - loss: 1.9894\n",
+      "Epoch 39/40\n",
+      "8s - loss: 1.9759\n",
+      "Epoch 40/40\n",
+      "11s - loss: 1.9567\n"
+     ]
+    }
+   ],
    "source": [
     "# train the model\n",
-    "model.fit(Xsmall, ysmall, batch_size=500, epochs=40,verbose = 1)\n",
+    "model.fit(Xsmall, ysmall, batch_size=500, epochs=40,verbose = 2)\n",
     "\n",
     "# save weights\n",
     "model.save_weights('model_weights/best_RNN_small_textdata_weights.hdf5')"
@@ -1352,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1398,18 +1503,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------\n",
+      "input chars = \n",
+      "in to love for irene adler. all emotions, and that one particularly, were abhorrent to his cold, pre\"\n",
+      "\n",
+      "predicted chars = \n",
+      "pint in the the the the the the the the the the the the the the the the the the the the the the the \"\n",
+      "\n",
+      "------------------\n",
+      "input chars = \n",
+      "dler, of dubious and questionable memory. i had seen little of holmes lately. my marriage had drifte\"\n",
+      "\n",
+      "predicted chars = \n",
+      "r and at the the the the the the the the the the the the the the the the the the the the the the the\"\n",
+      "\n",
+      "------------------\n",
+      "input chars = \n",
+      "d in the passage, paused immediately outside the door. then there was a loud and authoritative tap. \"\n",
+      "\n",
+      "predicted chars = \n",
+      " the the the the the the the the the the the the the the the the the the the the the the the the the\"\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: choose an input sequence and use the prediction function in the previous Python cell to predict 100 characters following it\n",
     "# get an appropriately sized chunk of characters from the text\n",
-    "start_inds = []\n",
+    "start_inds = [100, 1000, 10000]\n",
     "\n",
     "# load in weights\n",
     "model.load_weights('model_weights/best_RNN_small_textdata_weights.hdf5')\n",
@@ -1446,13 +1579,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is only a test \\nthe value of x is 2\\n'"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### A simple way to write output to file\n",
     "f = open('my_test_output.txt', 'w')              # create an output file to write too\n",
@@ -1521,7 +1665,7 @@
    "source": [
     "# TODO: choose an input sequence and use the prediction function in the previous Python cell to predict 100 characters following it\n",
     "# get an appropriately sized chunk of characters from the text\n",
-    "start_inds = []\n",
+    "start_inds = [200,2000,20000]\n",
     "\n",
     "# save output\n",
     "f = open('text_gen_output/RNN_large_textdata_output.txt', 'w')  # create an output file to write too\n",
